--- a/index.html
+++ b/index.html
@@ -3,8 +3,23 @@
 <head>
     <title>1213123123123123</title>
     <meta charset="utf-8">
+    <style>
+        h1 {
+            animation: spin 2s linear infinite;
+            color: black;
+            z-index: 1;
+            top: 50%;
+            left: 50%;
+            position: absolute;
+        }
+        @keyframes spin {
+            from { transform: scale(1) rotate(0deg); }
+            50% { transform: scale(50) rotate(180deg); }
+            to { transform: scale(1) rotate(360deg); }
+        }
+    </style>
 </head>
 <body>
-    <h1>1512aswqssd23cfsfk</h1>
+    <h1>你好</h1>
 </body>
 </html>
